--- a/Scriptie/tin-bachproef.tex
+++ b/Scriptie/tin-bachproef.tex
@@ -471,7 +471,7 @@ When looking at the adopted Bluetooth Low Energy profiles and services, as discu
 
 Of course, once we include non-adopted specifications, the list could go on forever with entries being added every day. For example, there's the ``Flower Power''\footnote{http://www.parrot.com/usa/products/flower-power/} device which measures your plant health by monitoring air temperature, soil temperature, soil moisture, soil electrical conductivity and more. It synchronizes with a smartphone that has the Flower Power application paired to the device and synchronizes the data to an online cloud at set intervals, where the data can then be queried with an API  (closed system as seen in figure \ref{fig:networkloops}). A lot of these services aren't included in the adopted specifications, so extending standard Bluetooth profiles with your own can greatly expand the possibilities of the technology. However, if the manufacturer doesn't release the specifications of their device, interoperability with existing apps or integrating that device in other apps will be made very hard.
 
-However, the Flower Power example isn't exactly the best Bluetooth Low Energy use case in existence. For example, what if there's a gardener who plants some of these devices in his/her customers' yards. If the customer isn't home for two weeks, then there's no cellphone to synchronize the data to and the gardener will have to come over to check if the plants need care either way. Some people in the community also thought this was a problem and made a NodeJS gateway application to run on a Raspberry PI or other computer but the product wasn't originally designed for this and the NodeJS gateway leaves a lot do be desired.
+However, the Flower Power example isn't exactly the best Bluetooth Low Energy use case in existence. For example, what if there's a gardener who plants some of these devices in his/her customers' yards. If the customer isn't home for two weeks, then there's no cellphone to synchronize the data to and the gardener will have to come over to check if the plants need care either way. Some people in the community also thought this was a problem and made a NodeJS gateway application to run on a Raspberry PI or other computer but the product wasn't originally designed for this and the NodeJS gateway leaves a lot to be desired.
 
 \section{Competitors}
 \label{sec:competitors}
