--- a/Scriptie/tin-bachproef.tex
+++ b/Scriptie/tin-bachproef.tex
@@ -402,27 +402,31 @@ There are a couple of techniques Bluetooth Low Energy uses to achieve low energy
 
 \chapter{Generic Access Profile}
 \label{ch:gap}
+\epigraph{``I NEED TO LOOK UP A QUOTE FOR THIS CHAPTER''}{Jan Van Braeckel}
+One of the most important parts in Bluetooth Low Energy, if not most important one, is the Generic Access Profile. This profile determines everything from advertising device presence to continuing to a connection. It specifies rules how devices can and must behave in order to interact with one another and imposes some general rules both devices have to follow. It also supports some modes and procedures to secure the data link, like authentication, bonding, authorization and encryption. In this chapter, we'll look at some general information about the Generic Access Profile like device roles and data channels before taking a look at how advertising, scanning, broadcasting and connections work.
 
-\section{Roles and states}
-\label{sec:rolesstates}
-Every Bluetooth Low Energy device has a couple of roles it can fulfill and states it can take on. Each of these roles and states have been optimized to perform their task as best it can. The following two sections explain these roles and states more in detail.
+\newpage{}
 
-\subsection{Roles}
-\label{subsec:roles}
-First of all there's the Broadcaster role, which only requires a device to have a transmitter and advertising profile. Broadcasters aren't necessarily devices that you can connect to, so manufacturing broadcast only devices could cut down on cost even more as there's no need to have a receiver on these devices. An example of this is a thermostat which constantly broadcasts its temperature.
+\section{Roles}
+\label{sec:roles}
+Every Bluetooth Low Energy device has a one or more roles it can fulfill. Each of these roles have been optimized to perform their task as best it can. First of all there's the Broadcaster role, which only requires a device to have a transmitter and advertising profile. Broadcasters aren't necessarily devices that you can connect to, so manufacturing broadcast only devices could cut down on cost even more as there's no need to have a receiver on these devices. An example of this is a thermostat which constantly broadcasts its temperature.
 
 Secondly there's the Observers, these devices are opposite to broadcasters as they don't require a transmitter. Observers just listen to advertising events and process the data further, without ever making a connection. These devices make perfect gateways for Observers, as a connection will never occur between these two, and the observer can just relay the data to an other collection point.
 
 The last two types of roles are Peripherals and Centrals. These two are the most complex roles as both devices are required to have both a transmitter and receiver. The big difference however is that a Peripheral will always act as a slave in a connection and a Central will always act as a master. This also means that the peripheral will (most of the time) be the least powerful device with the lowest battery life, like a watch or a sensor. It's vital that Peripheral devices don't do the heavy lifting in connections because this would drain the battery too quickly. The Central in a connection is usually a much more powerful device with a better battery life, like a smartphone, tablet or even computers.
 
-\subsection{States}
-\label{subsec:states}
-
 \section{Data channels}
 \label{sec:channels}
-Bluetooth Low Energy uses a number of channels in the 2.4 GHz ISM frequency band. Some of these channels are used for advertising and most of them are used for transferring data once a connection has been made. In total 40 channels are used, 3 of which are used for advertising and the remaining 37 are used for connections. The frequency range starts at 2402 and ends at 2483.5, giving each frequency a range of about 2 MHz to operate on. These channels have been carefully picked to have the least interference possible from WiFi on the advertising channels. Since every connection starts with advertisements it's vital that these packets flow without interference.
+Bluetooth Low Energy uses a number of channels in the 2.4 GHz ISM frequency band. Some of these channels are used for advertising and most of them are used for transferring data once a connection has been made. In total 40 channels are used, 3 of which are used for advertising and the remaining 37 are used for connections. The frequency range starts at 2402 and ends at 2483.5, giving each frequency a range of about 2 MHz to operate on. These channels have been carefully picked to have the least interference possible from WiFi on the advertising channels. Since every connection starts with advertisements it's vital that these packets flow without interference. A visualization of these channels can be found in figure \ref{fig:channelmap}.
 
 In order to make sure that connection packets flow as frequently as possible without having too many dropped packets, Bluetooth Low Energy uses adaptive frequency hopping. This means that at a set interval that the master and slave negotiate with each other, they will switch frequency with a known algorithm, ensuring they'll always end up in the same frequency band. If data doesn't make it through on a given channel, the frequency hop will occur prematurely and both master and slave will move on to the next frequency and resend the packet(s) that weren't acknowledged.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.9\textwidth]{img/channelmap.png}
+    \caption[Image visualizing the Bluetooth Low Energy channel spectrum]{Image visualizing the Bluetooth Low Energy channel spectrum. The green channels are advertising channels while the remaining 37 are used for connections. LL stands for the corresponding number that the link layer assigns to these channels.}
+    \label{fig:channelmap}
+\end{figure}
 
 \section{Advertising, scanning and broadcasting}
 \label{sec:advscbroa}
